ContactForm state defined. EmailJS dependency. WIP, need account Params. ContactForm--hidden z-index fixed.

--- a/public/sass/components/contactform.module.scss
+++ b/public/sass/components/contactform.module.scss
@@ -29,7 +29,7 @@
 
   &__hidden {
     position: absolute;
-    z-index: 5;
+    z-index: -5;
     top: 0;
     left: 0;
 
