--- a/public/sass/components/contactlinks.module.scss
+++ b/public/sass/components/contactlinks.module.scss
@@ -19,6 +19,7 @@
     width: 10rem;
 
     margin-bottom: none;
+    cursor: pointer;
   }
 
   & > * {
